--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,9 @@ jobs:
           node-version: "22.x"
 
       - name: Install pnpm
-        uses: pnpm/action-setup@v4      
+        uses: pnpm/action-setup@v4  
+        with:
+          version: '9.x'    
       
       - name: Install dependencies
         run: pnpm install
