--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,10 +26,10 @@ jobs:
         run: pnpm install
 
       - name: Run Linter
-        run: pnpm lint
+        run: pnpm run lint
 
-      - name: Run formatter
-        run: pnpm format
+      # - name: Run formatter
+      #   run: pnpm format
 
       - name: Run build
         run: pnpm build
