--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "pnpm dlx cypress run",
-    "lint": "pnpm dlx eslint"
-   
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"   
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cypress": "^13.16.0",
     "eslint": "^9.15.0",
-    "prettier": "^3.4.1"
+    "prettier": "^3.4.1",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "15.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3"
   }
 }
