--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,3 +33,24 @@ jobs:
 
       - name: Run build
         run: pnpm build
+
+      - name: Run cypress tests
+        uses: cypress-io/github-action@v6
+        with:        
+          start: pnpm run dev
+          wait-on: 'http://localhost:3000'
+          record: true       
+       
+      - name: Upload cypress screenshots
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
+
+      - name: Upload cypress videos
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cypress-videos
+          path: cypress/videos
