--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,8 +39,11 @@ jobs:
         with:        
           start: pnpm run dev
           wait-on: 'http://localhost:3000'
-          record: true       
-       
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.ACT_GITHUB_TOKEN }} 
+              
       - name: Upload cypress screenshots
         uses: actions/upload-artifact@v3
         if: failure()
