--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Run Linter
         run: pnpm run lint
 
-      # - name: Run formatter
-      #   run: pnpm format
+      - name: Run formatter
+        run: pnpm run format
 
       - name: Run build
         run: pnpm build
@@ -43,7 +43,7 @@ jobs:
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.ACT_GITHUB_TOKEN }} 
-              
+
       - name: Upload cypress screenshots
         uses: actions/upload-artifact@v3
         if: failure()
